--- a/Minigames/src/plugin.yml
+++ b/Minigames/src/plugin.yml
@@ -1,7 +1,9 @@
 name: Minigames
 version: 0.1
-load: startup
 author: Virtual_Wolf
 main: com.shockwavemc.Minigames
 commands:
    mg:
+      description: Minigames command
+   mw:
+      description: Multiworld command
